# astrogrid-legacy

./: README.md
AceDialog.java/: AceClientOptions.java  AceDialog.java  AceServers.java  AladinAceClient.java  TemplateEditorPanel.java
adql2/: .project  README
adql2/maven-base/: .gitignore  maven.xml  project.properties  project.xml
astrogrid/: .classpath  .gitignore  .project  Applications.tpr  AstrogridFull.tpr  astrogrid-project-version.properties  maven.xml  pom.xml  project.properties  project.xml  tags.txt
astrogrid-software-site/: .gitignore  maven.xml  pom.xml  project.properties  project.xml  site.jsl
astrogrid-software-site/site/: site.xml
astrogrid-software-site/xdoc-dtd/: README.txt  xdoc.css  xdoc.dtd  xhtml-attribs-1.mod  xhtml-base-1.mod  xhtml-bdo-1.mod  xhtml-blkphras-1.mod  xhtml-blkpres-1.mod  xhtml-blkstruct-1.mod  xhtml-charent-1.mod  xhtml-csismap-1.mod  xhtml-datatypes-1.mod  xhtml-edit-1.mod  xhtml-events-1.mod  xhtml-form-1.mod  xhtml-framework-1.mod  xhtml-hypertext-1.mod  xhtml-image-1.mod  xhtml-inlphras-1.mod  xhtml-inlpres-1.mod  xhtml-inlstruct-1.mod  xhtml-inlstyle-1.mod  xhtml-link-1.mod  xhtml-list-1.mod  xhtml-meta-1.mod  xhtml-notations-1.mod  xhtml-object-1.mod  xhtml-param-1.mod  xhtml-pres-1.mod  xhtml-qname-1.mod  xhtml-ruby-1.mod  xhtml-script-1.mod  xhtml-ssismap-1.mod  xhtml-struct-1.mod  xhtml-style-1.mod  xhtml-table-1.mod  xhtml-text-1.mod  xhtml11-model-1.mod  xhtml11.dtd
astrogrid-software-site/xdocs/: about.html  acks.xml  cdk.html  client-install.html  comingsoon.html  enhancements.xml  faq.fml  feature-summary.xml  glossary.xml  index.xml  navigation.xml  pdf-navigation.xml  publications.xml  related.xml  template.xml  what-is-ag.xml  where-to-find-help.xml
astrogrid/Design/: default.dfPackage
astrogrid/StoreBrowser/: StoreBrowser.cpr
astrogrid/adql/: maven.xml  pom.xml  project.properties  project.xml
astrogrid/adql2/: .gitignore  README  build.properties  maven.xml  pom.xml  project.properties  project.xml
astrogrid/aggregate/: maven.xml  project.properties  project.xml
astrogrid/ar-taverna/: pom.xml  (+5 more)
astrogrid/desktop/capi/: CMakeLists.txt  acr-capi-example.c  arintf.h  cleanjel.xsl  genc.xsl  index.html  intf.cpp  intf.h  intfclasses.cpp  intfclasses.h  makefile  notes.txt  pom.xml  sources.mk  subdir.mk  testintf.c  testintf.h
astrogrid/desktop/capi/core/: AR.cpp  AR.h  JavaProperties.cpp  JavaProperties.h  URL.cpp  URL.h  acrtypes.c  acrtypes.h  arcontainers.cpp  arcontainers.h  plastic.cpp  plastic.h  subdir.mk
astrogrid/desktop/capi/idl/: CMakeLists.txt  IDLStruct.cpp  IDLStruct.h  acr_idl.dlm  idl_acr.cpp  idlhelper.cpp  idlhelper.h  makefile  readme.txt
astrogrid/desktop/capi/xmlrpc/: XmlRpcValue.cpp  XmlRpcValue.h  subdir.mk
mavenrun/: autorun.sh  backup.sh  bounce-tomcat.sh  build-all.sh  build-component.sh  clean-site.sh  cvs-checkout-clean.sh  cvs-checkout.sh  document-all.sh  document-component.sh  install-portal.sh  int-test.sh  maven-build-all-release.sh  maven-build-all-tagged.sh  maven-build-all.sh  maven-build-maven-site-tagged.sh  maven-build-maven-site.sh  maven-build-new.sh  maven-build-release.sh  maven-build-tagged-new.sh  maven-build-tagged.sh  maven-build.sh  maven-integration-tests.sh  maven-remove-jars.sh  publish-all.sh  publish-component.sh  publish-release-docs.sh  reinstall-aginab.sh  run-and-publish-tests.sh  run-int-test.sh
status/: project.properties  project.xml
storeclient/: project.properties  project.xml
(+20239 files in other folders)
